finalizando os testes da aplicação do challenger final

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,8746],[],[[4,0,0,[5],[1,81,331],[]],[6,0,0,[7],[1,413,1314],[]],[8,0,0,[7],[0,1727,1121,9],[]],[10,0,0,[11],[1,2848,855],[]],[12,0,0,[13],[1,3704,724],[]],[14,0,0,[15],[0,4429,1431,16],[]],[17,0,0,[18],[1,5860,1438],[]],[19,0,0,[20],[1,7299,1446],[]]],[],[8,6,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22997],[],[[4,0,0,[5],[1,2120,3323],[]],[6,0,0,[7],[1,5488,3801],[]],[8,0,0,[9],[1,9336,4382],[]],[10,0,0,[11],[1,13726,3264],[]],[12,0,0,[13],[1,17057,2355],[]],[14,0,0,[15],[1,19457,3170],[]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Theaters Tests","*/media/marcos/MEU HD/challenge_tecnico_do_pb/tests/api/theaters_tests.robot","*tests/api/theaters_tests.robot","*Listar Todas As Salas Deve Retornar Lista","*THE-001","*Obter Sala Por ID Deve Retornar Detalhes","*THE-002","*Obter Assentos Da Sala Deve Retornar Mapa","eNrFzUsOgjAUQNGtNMxL+YUiQSZG48g4cAP9PCxY2ua14PZ14B6c3pzkXh+P+xnRY0+aoiEnO4NL5FduPpGL35wmk0eyoe3JIIhBmI6ZSSnEnjFlhLXgnkCDpFKoF3WH97oks3V0Fah81LAXdaQB/QIqxXwHVGBzEQITYWZ7yZIBkQAja7u24Z3mXJZqqis+KamhKgsWvyBm4x+mAxPjB9aVZFg=","*Admin Criar Nova Sala Deve Ter Sucesso","*THE-003","*Usuário Comum Tentar Criar Sala Deve Falhar","*THE-004","*Admin Atualizar Sala Deve Ter Sucesso","*THE-005","*400 != 200","*Admin Deletar Sala Vazia Deve Ter Sucesso","*THE-006","*Tentar Deletar Sala Com Sessões Ativas Deve Falhar","*THE-007"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Auth Tests","*/media/marcos/MEU HD/challenge_tecnico_do_pb/tests/web/auth_tests.robot","*tests/web/auth_tests.robot","*WEB-AUTH-01 - Login Usuario Bem Sucedido","*WEB-AUTH-01","*WEB-AUTH-02 - Login Admin Bem Sucedido","*WEB-AUTH-02","*WEB-AUTH-03 - Login Com Credenciais Invalidas","*WEB-AUTH-03","*WEB-AUTH-04 - Registro De Novo Usuario","*WEB-AUTH-04","*WEB-AUTH-05 - Registro Com Senhas Diferentes","*WEB-AUTH-05","*WEB-AUTH-06 - Logout Do Sistema","*WEB-AUTH-06"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":2,"label":"All Tests","pass":6,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"THE-001","pass":1,"skip":0},{"elapsed":"00:00:02","fail":1,"label":"THE-002","pass":1,"skip":0},{"elapsed":"00:00:01","fail":0,"label":"THE-003","pass":1,"skip":0},{"elapsed":"00:00:01","fail":0,"label":"THE-004","pass":1,"skip":0},{"elapsed":"00:00:01","fail":1,"label":"THE-005","pass":0,"skip":0},{"elapsed":"00:00:01","fail":0,"label":"THE-006","pass":1,"skip":0},{"elapsed":"00:00:01","fail":0,"label":"THE-007","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":2,"id":"s1","label":"Theaters Tests","name":"Theaters Tests","pass":6,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":6,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"WEB-AUTH-01","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"WEB-AUTH-02","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"WEB-AUTH-03","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"label":"WEB-AUTH-04","pass":1,"skip":0},{"elapsed":"00:00:02","fail":0,"label":"WEB-AUTH-05","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"label":"WEB-AUTH-06","pass":1,"skip":0}],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Auth Tests","name":"Auth Tests","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1751414997404;
+window.output["baseMillis"] = 1751491656945;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8762;
+window.output["generated"] = 23039;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
