--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22997],[],[[4,0,0,[5],[1,2120,3323],[]],[6,0,0,[7],[1,5488,3801],[]],[8,0,0,[9],[1,9336,4382],[]],[10,0,0,[11],[1,13726,3264],[]],[12,0,0,[13],[1,17057,2355],[]],[14,0,0,[15],[1,19457,3170],[]]],[],[6,6,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,59978],[],[[4,0,0,[5],[0,1180,15919,6],[]],[7,0,0,[8],[0,17106,14262,6],[]],[9,0,0,[10],[0,31374,14210,6],[]],[11,0,0,[12],[0,45589,14326,6],[]]],[],[4,0,4,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Auth Tests","*/media/marcos/MEU HD/challenge_tecnico_do_pb/tests/web/auth_tests.robot","*tests/web/auth_tests.robot","*WEB-AUTH-01 - Login Usuario Bem Sucedido","*WEB-AUTH-01","*WEB-AUTH-02 - Login Admin Bem Sucedido","*WEB-AUTH-02","*WEB-AUTH-03 - Login Com Credenciais Invalidas","*WEB-AUTH-03","*WEB-AUTH-04 - Registro De Novo Usuario","*WEB-AUTH-04","*WEB-AUTH-05 - Registro Com Senhas Diferentes","*WEB-AUTH-05","*WEB-AUTH-06 - Logout Do Sistema","*WEB-AUTH-06"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Booking Tests","*/media/marcos/MEU HD/challenge_tecnico_do_pb/tests/web/booking_tests.robot","*tests/web/booking_tests.robot","*WEB-BOOK-01 - Visualizar Sessoes Disponiveis","*WEB-BOOK-01","*TimeoutError: locator.waitFor: Timeout 10000ms exceeded.\nCall log:\n  - waiting for locator('text=Selecionar Assentos').first() to be visible\n","*WEB-BOOK-02 - Tentar Acessar Selecao Assentos","*WEB-BOOK-02","*WEB-BOOK-03 - Verificar Precos Das Sessoes","*WEB-BOOK-03","*WEB-BOOK-04 - Verificar Multiplas Sessoes","*WEB-BOOK-04"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":6,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"WEB-AUTH-01","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"WEB-AUTH-02","pass":1,"skip":0},{"elapsed":"00:00:04","fail":0,"label":"WEB-AUTH-03","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"label":"WEB-AUTH-04","pass":1,"skip":0},{"elapsed":"00:00:02","fail":0,"label":"WEB-AUTH-05","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"label":"WEB-AUTH-06","pass":1,"skip":0}],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Auth Tests","name":"Auth Tests","pass":6,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:59","fail":4,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:16","fail":1,"label":"WEB-BOOK-01","pass":0,"skip":0},{"elapsed":"00:00:14","fail":1,"label":"WEB-BOOK-02","pass":0,"skip":0},{"elapsed":"00:00:14","fail":1,"label":"WEB-BOOK-03","pass":0,"skip":0},{"elapsed":"00:00:14","fail":1,"label":"WEB-BOOK-04","pass":0,"skip":0}],[{"elapsed":"00:01:00","fail":4,"id":"s1","label":"Booking Tests","name":"Booking Tests","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1751491656945;
+window.output["baseMillis"] = 1751563655527;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23039;
+window.output["generated"] = 59999;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
